--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "angular-cesium": "^0.0.73",
+    "boxicons": "^2.1.2",
     "cesium": "^1.91.0",
     "random-location": "^1.1.3",
     "rxjs": "~7.5.0",
